test/parse/assert/bad-assertreturn-too-many.txt
;;; ERROR: 1
;;; FLAGS: --spec
(module
  (func $foo (result i32) 
    i32.const 0)
  (export "foo" (func $foo)))
(assert_return (invoke "foo" (i32.const 0)) (i32.const 0))
(;; STDERR ;;;
out/test/parse/assert/bad-assertreturn-too-many.txt:7:17: error: too many parameters to function. got 1, expected 0
(assert_return (invoke "foo" (i32.const 0)) (i32.const 0))
                ^^^^^^
;;; STDERR ;;)
